--- a/CourseWork/Resource/Pages/ChordsPage.xaml
+++ b/CourseWork/Resource/Pages/ChordsPage.xaml
@@ -25,28 +25,25 @@
             <RowDefinition/>
             <RowDefinition Height="70"/>
         </Grid.RowDefinitions>
-        <ListBox x:Name="songListBox" Margin="10" Grid.RowSpan="2" SelectionChanged="songListBox_SelectionChanged"/>
-        <Grid Grid.Column="1">
-
-            <Grid Width="200" Margin="50 10">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                    </Grid.ColumnDefinitions>
-                    <Grid Grid.Column="0">
-                        <Button x:Name="addTone" Click="addTone_Click" Content="▲" FontFamily="Rubik" Background="#F9D100" />
-                    </Grid>
-                    <Label x:Name="toneLabel" Foreground="White" Content="Тон" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    <Grid Grid.Column="2">
-                        <Button Click="minusTone_Click" x:Name="minusTone" Content="▼" FontFamily="Rubik" Background="#F9D100" />
-                    </Grid>
-                </Grid>
+        <Button x:Name="favoriteButton" Content="Избранное" FontFamily="Rubik" Background="#F9D100"  Margin="10"/>
+        <ListBox x:Name="songListBox" Margin="10" Grid.Row="1" SelectionChanged="songListBox_SelectionChanged"/>
+        <Grid Width="200" Margin="50 10" Grid.Column="1" HorizontalAlignment="Left">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid Grid.Column="0">
+                <Button x:Name="addTone" Click="addTone_Click" Content="▲" FontFamily="Rubik" Background="#F9D100" />
+            </Grid>
+            <Label x:Name="toneLabel" Foreground="White" Content="Тон" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <Grid Grid.Column="2">
+                <Button Click="minusTone_Click" x:Name="minusTone" Content="▼" FontFamily="Rubik" Background="#F9D100" />
             </Grid>
         </Grid>
+        <Image x:Name="favoriteImage" Height="40" Width="40" Grid.Column="1" HorizontalAlignment="Right" Margin="10" Source="/CourseWork;component/Resource/Pictures/Unfavorite.png" Stretch="Fill"/>
         <ScrollViewer Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Margin="10">
-            <TextBox x:Name="songText" IsReadOnly="True"/>
+        <TextBox x:Name="songText" IsReadOnly="True"/>
         </ScrollViewer>
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
@@ -56,6 +53,6 @@
             <Button Grid.Column="0"  Margin="10 10" x:Name="addSongButton" Content="Добавить Песню" FontFamily="Rubik" Background="#F9D100" Click="addSongButton_Click"/>
             <Button Grid.Column="1" Margin="10 10" x:Name="delSongButton" Content="Удалить Песню" FontFamily="Rubik" Background="#F9D100" Click="delSongButton_Click"/>
         </Grid>
-        
+
     </Grid>
 </Page>
