--- a/CourseWork/Resource/Pages/ChordsPage.xaml
+++ b/CourseWork/Resource/Pages/ChordsPage.xaml
@@ -4,17 +4,9 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:CourseWork.Resource.Pages"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      mc:Ignorable="d"
       Title="ChordsPage"
-      Background="#FF525252">
-    <Page.Resources>
-        <!--<Storyboard x:Key="ButtonClick">
-            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(FrameworkElement.Height)" Storyboard.TargetName="BorderButton">
-                <EasingDoubleKeyFrame KeyTime="0:0:0.2" Value="2"/>
-            </DoubleAnimationUsingKeyFrames>
-        </Storyboard>-->
-    </Page.Resources>
+      Background="#FF525252" Height="538" Width="863">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="300"/>
@@ -41,9 +33,9 @@
                 <Button Click="minusTone_Click" x:Name="minusTone" Content="▼" FontFamily="Rubik" Background="#F9D100" />
             </Grid>
         </Grid>
-        <Image x:Name="favoriteImage" Height="40" Width="40" Grid.Column="1" HorizontalAlignment="Right" Margin="10" Source="/CourseWork;component/Resource/Pictures/Unfavorite.png" Stretch="Fill"/>
+        <Image x:Name="favoriteImage"  MouseLeftButtonDown="favoriteImage_MouseLeftButtonDown" Height="30" Width="30" Grid.Column="1" HorizontalAlignment="Right" Margin="10"/>
         <ScrollViewer Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Margin="10">
-        <TextBox x:Name="songText" IsReadOnly="True"/>
+            <TextBox x:Name="songText" IsReadOnly="True"/>
         </ScrollViewer>
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
