--- a/CourseWork/Resource/Pages/LessonsPage.xaml
+++ b/CourseWork/Resource/Pages/LessonsPage.xaml
@@ -6,7 +6,23 @@
       xmlns:local="clr-namespace:CourseWork.Resource.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="LessonsPage">
+      Title="LessonsPage"
+      Background="#525252">
 
-    <Grid/>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Label Content="Выберите урок для ознакомления" FontSize="30" HorizontalAlignment="Center" Foreground="White" FontFamily="Rubik"/>
+        <Button Grid.Row="1" Width="500" x:Name="lesOneButton" Content="1. Первый аккорд" FontFamily="Rubik" Background="#F9D100"  Margin="10"/>
+        <Button Grid.Row="2" Width="500" x:Name="lesTwoButton" Content="2. Первая песня" FontFamily="Rubik" Background="#F9D100"  Margin="10"/>
+        <Button Grid.Row="3" Width="500" x:Name="lesThreeButton" Content="3. Учим переборы" FontFamily="Rubik" Background="#F9D100"  Margin="10"/>
+        <Button Grid.Row="4" Width="500" x:Name="lesFourButton" Content="4. Вход идут баррэ" FontFamily="Rubik" Background="#F9D100"  Margin="10"/>
+        <Button Grid.Row="5" Width="500" x:Name="lesFiveButton" Content="5.Сложная часть" FontFamily="Rubik" Background="#F9D100"  Margin="10"/>
+    </Grid>
 </Page>
