--- a/CourseWork/Resource/Pages/TunnerPage.xaml
+++ b/CourseWork/Resource/Pages/TunnerPage.xaml
@@ -3,19 +3,49 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:CourseWork.Resource.UI.Tuners"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="TunnerPage"
       Background="#FF525252">
       
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions> 
-        <local:GuitarTuner/>
-        <Grid Grid.Column="1">
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="170"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <StackPanel Grid.Row="0" HorizontalAlignment="Center">
+                <Label x:Name="noteLabel" Content="Note" Foreground="White" FontFamily="Rubik" HorizontalAlignment="Center" FontSize="52"/>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                    <Label Content="♭" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontFamily="Rubik"/>
+                    <Border x:Name="high5NoteIndicator" Height="40" Width="20" Background="#D34001" BorderBrush="Black" BorderThickness="0" CornerRadius="3 0 0 3"/>
+                    <Border x:Name="high4NoteIndicator" Height="40" Width="20" Background="#D16312" BorderBrush="Black" BorderThickness="0" CornerRadius="0"/>
+                    <Border x:Name="high3NoteIndicator" Height="40" Width="20" Background="#A59508" BorderBrush="Black" BorderThickness="0" CornerRadius="0"/>
+                    <Border x:Name="high2NoteIndicator" Height="40" Width="20" Background="#82AB0E" BorderBrush="Black" BorderThickness="0" CornerRadius="0"/>
+                    <Border x:Name="high1NoteIndicator" Height="40" Width="20" Background="#66B039" BorderBrush="Black" BorderThickness="0" CornerRadius="0"/>
+                    <Border x:Name="idealNoteIndicator" Height="40" Width="20" Background="#258E22" BorderBrush="Black" BorderThickness="0" CornerRadius="0"/>
+                    <Border x:Name="low1NoteIndicator" Height="40" Width="20" Background="#66B039" BorderBrush="Black" BorderThickness="0" CornerRadius="0"/>
+                    <Border x:Name="low2NoteIndicator" Height="40" Width="20" Background="#82AB0E" BorderBrush="Black" BorderThickness="0" CornerRadius="0"/>
+                    <Border x:Name="low3NoteIndicator" Height="40" Width="20" Background="#A59508" BorderBrush="Black" BorderThickness="0" CornerRadius="0"/>
+                    <Border x:Name="low4NoteIndicator" Height="40" Width="20" Background="#D16312" BorderBrush="Black" BorderThickness="0" CornerRadius="0"/>
+                    <Border x:Name="low5NoteIndicator" Height="40" Width="20" Background="#D34001" BorderBrush="Black" BorderThickness="0" CornerRadius="0 3 3 0"/>
+                    <Label Content="#" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontFamily="Rubik"/>
+                </StackPanel >
+                <Label x:Name="freqLabel" Content="Freq" Foreground="White" FontFamily="Rubik" HorizontalAlignment="Center" FontSize="36"/>
+            </StackPanel>
+            <Grid Grid.Row="1" Height="30" Width="80">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="26"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Button Grid.Row="0" x:Name="startRecord" Content="Включить" Width="80" FontFamily="Rubik" Background="#F9D100" Click="startRecord_Click"/>
+            </Grid>
+        </Grid>
+        <Grid Grid.Row="1">
             <StackPanel VerticalAlignment="Center">
                 <Label Content="Выберите устройство записи" VerticalAlignment="Center" FontFamily="Rubik" Foreground="White" HorizontalAlignment="Center"/>
                 <ComboBox x:Name="cdDevice" Height="30" Width="200"/>
