--- a/CourseWork/Resource/Pages/ApplicaturePage.xaml
+++ b/CourseWork/Resource/Pages/ApplicaturePage.xaml
@@ -6,22 +6,15 @@
       xmlns:local="clr-namespace:CourseWork.Resource.Pages"
       mc:Ignorable="d"
       Title="ApplicaturePage"
-      Background="#FF525252" Height="600" Width="600">
+      Background="#FF525252">
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="220"/>
+            <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-
-
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-            </Grid.ColumnDefinitions>
-
-            <Grid Grid.Column="0" Margin="10">
+        <StackPanel Orientation="Horizontal">
+            <Grid Grid.Column="0" Margin="10" Width="100">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="40"/>
                     <RowDefinition/>
@@ -45,8 +38,7 @@
                 </ListView>
 
             </Grid>
-            <Grid Grid.Column="1" Margin="10">
-
+            <Grid Grid.Column="1" Margin="10" Width="100">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="40"/>
                     <RowDefinition/>
@@ -61,18 +53,21 @@
                     <ListViewItem HorizontalAlignment="Center">7</ListViewItem>
                 </ListView>
             </Grid>
-        </Grid>
+        </StackPanel>
+        <StackPanel  Orientation="Horizontal" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Image Source="/Resource/Pictures/hand.png"  Width="50" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="10"/>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition/>
+                    <RowDefinition Height="70"/>
+                </Grid.RowDefinitions>
+                <Label x:Name="nameNoteLabel" Content="Аккорд" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontFamily="Rubik" FontSize="30"/>
+                <Image x:Name="AplicatureImage" Grid.Row="1" Margin="10" Height="350" Width="260"/>
+                <Button Grid.Row="2" Margin="10" x:Name="listenButton" Click="listenButton_Click" Content="Прослушать"  FontFamily="Rubik" Background="#F9D100"/>
+            </Grid>
+        </StackPanel>
 
-        <Grid Grid.Column="1">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="50"/>
-                <RowDefinition/>
-                <RowDefinition Height="70"/>
-            </Grid.RowDefinitions>
-            <Label x:Name="nameNoteLabel" Content="Аккорд" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontFamily="Rubik" FontSize="30"/>
-            <Image x:Name="AplicatureImage" Grid.Row="1" Margin="10" Height="350" Width="260"/>
-            <Button Grid.Row="2" Margin="10" x:Name="listenButton" Click="listenButton_Click" Content="Прослушать"  FontFamily="Rubik" Background="#F9D100"/>
-        </Grid>
     </Grid>
 
 </Page>
