--- a/CourseWork/Resource/Pages/RecoveryPage.xaml
+++ b/CourseWork/Resource/Pages/RecoveryPage.xaml
@@ -17,15 +17,15 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <StackPanel VerticalAlignment="Bottom">
-            <Label Content="Логин:" HorizontalAlignment="Center" Foreground="White"/>
+            <Label Content="Логин" HorizontalAlignment="Center" FontFamily="Rubik" FontSize="16" Foreground="White"/>
             <TextBox x:Name="loginBox" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="20" FontFamily="Rubik" Width="200"/>
         </StackPanel>
         <StackPanel VerticalAlignment="Bottom" Grid.Row="1">
-            <Label Content="Код востановления:" HorizontalAlignment="Center" Foreground="White"/>
+            <Label Content="Код востановления" FontFamily="Rubik" FontSize="16" HorizontalAlignment="Center" Foreground="White"/>
             <TextBox x:Name="recoveryBox" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="20" FontFamily="Rubik" Width="200"/>
         </StackPanel>
         <StackPanel VerticalAlignment="Bottom" Grid.Row="2">
-            <Label Content="Введите новый пароль:" HorizontalAlignment="Center" Foreground="White"/>
+            <Label Content="Введите новый пароль" FontFamily="Rubik" FontSize="16" HorizontalAlignment="Center" Foreground="White"/>
             <TextBox x:Name="passwordBox" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="20" FontFamily="Rubik" Width="200"/>
         </StackPanel>
         <Button Grid.Row="4" x:Name="recoverButton" Click="recoverButton_Click" Content="Восстановить" Width="200" Height="50" VerticalAlignment="Top" FontFamily="Rubik" Background="#F9D100" Margin="10"/>
