--- a/CourseWork/Resource/Pages/RegisterPage.xaml
+++ b/CourseWork/Resource/Pages/RegisterPage.xaml
@@ -18,10 +18,10 @@
             <RowDefinition Height="50"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Label Grid.Row="0" Content="Логин" Foreground="White" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
-        <TextBox Grid.Row="1" x:Name="loginTextBox" Height="25" Width="200" VerticalAlignment="Top"/>
-        <Label Grid.Row="2" Content="Пароль" Foreground="White" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
-        <TextBox Grid.Row="3" x:Name="passwordTextBox" Height="25" Width="200" VerticalAlignment="Top"/>
+        <Label Grid.Row="0" Content="Логин" FontFamily="Rubik" FontSize="16" Foreground="White" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
+        <TextBox Grid.Row="1" x:Name="loginTextBox" FontFamily="Rubik" FontSize="20" Width="200" VerticalAlignment="Top"/>
+        <Label Grid.Row="2" Content="Пароль" Foreground="White" FontFamily="Rubik" FontSize="16"  VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
+        <TextBox Grid.Row="3" x:Name="passwordTextBox" FontFamily="Rubik" FontSize="20" Height="25" Width="200" VerticalAlignment="Top"/>
         <Button Grid.Row="4" Click="signUpButton_Click" x:Name="signUpButton" Content="Зарегистрироваться" Width="200" Height="50" VerticalAlignment="Top" FontFamily="Rubik" Background="#F9D100"/>
         <Label Content="" x:Name="recoveryLabel" Grid.Row="5" Margin="10" Foreground="White" FontSize="20" FontFamily="Rubik" HorizontalAlignment="Center"/>
     </Grid>
